# unfinished-game

./: .gitmodules  .travis.yml  CMakeLists.txt
cmake/: StandardProjectSettings.cmake  StaticAnalyzers.cmake
doc/html/: _engine_8h_source.html  _engine_interface_8h_source.html  _engine_registry_8h_source.html  _rendering_engine_8h_source.html  _rendering_manager_8h_source.html  _startup_manager_8h_source.html  _user_interface_8h_source.html  _user_interface_manager_8h_source.html  _user_interface_object_8h_source.html  annotated.html  class_s_d_l_1_1_engine_interface-members.html  class_s_d_l_1_1_engine_interface.html  class_s_d_l_1_1_rendering_manager-members.html  class_s_d_l_1_1_rendering_manager.html  class_s_d_l_1_1_u_i_1_1_user_interface_manager-members.html  class_s_d_l_1_1_u_i_1_1_user_interface_manager.html  class_s_d_l_1_1_u_i_1_1priv_1_1_user_interface_object-members.html  class_s_d_l_1_1_u_i_1_1priv_1_1_user_interface_object.html  class_s_d_l_1_1priv_1_1_engine_registry-members.html  class_s_d_l_1_1priv_1_1_engine_registry.html  class_s_d_l_1_1priv_1_1_window_startup_details-members.html  class_s_d_l_1_1priv_1_1_window_startup_details.html  classes.html  dir_1f97fa560589054507d91612978070fa.html  dir_4aa4f564f30c3d0ddda7e0de25a284e6.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68d72db8d9e17adc2ae4d005026dc77e.html  files.html  functions.html  functions_func.html  index.html
doc/html/search/: all_1.js  all_2.js  all_4.js  all_5.js  classes_0.js  classes_1.js  functions_1.js  functions_2.js  searchdata.js
doc/latex/: _engine_8h_source.tex  _engine_interface_8h_source.tex  _engine_registry_8h_source.tex  _rendering_engine_8h_source.tex  _rendering_manager_8h_source.tex  _startup_manager_8h_source.tex  _user_interface_8h_source.tex  _user_interface_manager_8h_source.tex  _user_interface_object_8h_source.tex  annotated.tex  class_s_d_l_1_1_engine_interface.tex  class_s_d_l_1_1_rendering_manager.tex  class_s_d_l_1_1_u_i_1_1_user_interface_manager.tex  class_s_d_l_1_1_u_i_1_1priv_1_1_user_interface_object.tex  class_s_d_l_1_1priv_1_1_engine_registry.tex  class_s_d_l_1_1priv_1_1_window_startup_details.tex  files.tex  refman.tex
dox/: Doxyfile
src/: CMakeLists.txt  EntryPoint.cxx
src/Backend/: CMakeLists.txt
src/Backend/include/Backend/: EngineInterface.h  EngineRegistry.h  MouseState.h  StartupManager.h
src/Backend/src/: EngineInterface.cxx  KeyboardState.cxx  MouseState.cxx  StartupManager.cxx
src/Backend/test/: CMakeLists.txt  StartupManagerTest.cxx
src/Interface/: CMakeLists.txt
src/Rendering/: CMakeLists.txt
src/Rendering/include/Rendering/: DirectTextureContainer.h  DirectTextureFactory.h  RenderScene.h  RenderingEngine.h  RenderingManager.h
src/Rendering/src/: DirectTextureContainer.cxx  RenderScene.cxx  RenderingManager.cxx
src/direct_engine/: CMakeLists.txt  EngineInterface.cxx  EngineInterface.h  EngineRegistry.h  MouseState.cxx  StartupManager.cxx
src/direct_engine/interface_engine/: CMakeLists.txt  UserInterfaceManager.h  UserInterfaceObject.h
src/direct_engine/render_engine/: CMakeLists.txt  DirectObjectContainerPreset.h  DirectTextireContainer.h  DirectTexture.cxx  DirectTexture.h  DirectTextureContainer.cxx  DirectTextureContainer.h  DirectTextureFactory.cxx  DirectTextureFactory.h  RenderObject.h  RenderScene.cxx  RenderScene.h  RenderingEngine.h  RenderingExceptions.h  RenderingManager.cxx  RenderingManager.h
src/direct_engine/render_engine/engine_interfaces/: DirectObjectContainerPreset.h
src/direct_engine/render_engine/texture_components/: DirectTextureContainer.cxx  DirectTextureContainer.h  DirectTextureFactory.cxx  DirectTextureFactory.h
src/engine/: CMakeLists.txt  EngineInterface.cxx  KeyboardState.cxx  KeyboardState.h  MouseState.h  StartupManager.cxx  StartupManager.h
src/engine/render_engine/: CMakeLists.txt  RenderScene.h  RenderingEngine.h  RenderingExceptions.h  RenderingManager.cxx
src/engine/render_engine/engine_interfaces/: DirectObjectContainerPreset.cxx
src/engine/render_engine/texture_components/: DirectTextureContainer.h  DirectTextureFactory.h
src/interface_engine/: UserInterfaceManager.h
src/render_engine/: CMakeLists.txt  RenderingManager.cxx
src/sdl_engine/: CMakeLists.txt  EngineInterface.cxx  EngineInterface.h
src/sdl_engine/rendering/: CMakeLists.txt  RenderingManager.cxx  RenderingManager.h
src/sdl_engine/ui/: CMakeLists.txt  UserInterface.h  UserInterfaceManager.h  UserInterfaceObject.h
